--- a/src/components/recommendation/Recommendation.scss
+++ b/src/components/recommendation/Recommendation.scss
@@ -4,8 +4,6 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
-  background-color: $primary-clr-3;
   padding-block: 8px;
   position: relative;
   padding-inline: $app-padding-xs;
