--- a/src/components/recommendation/RecommendationCard.scss
+++ b/src/components/recommendation/RecommendationCard.scss
@@ -10,7 +10,7 @@
 }
 
 .recommendation-card__bg-img {
-  height: 550px;
+  height: 500px;
   transition: width 1s ease;
   grid-row-start: span 3;
 }
