--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -35,7 +35,7 @@
   color: $font-clr-dark;
   letter-spacing: 2px;
   width: 100%;
-  padding: 0.7em;
+  padding: 0.55em;
   border-radius: 23px;
   caret-color: $accent-clr;
   font-size: $font-xs;
